--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="box">helllo</div>
+    <div id="box1">helllo</div>
+    <br />
+    <div id="box2">dhgfjb</div>
 
     <script type="module" src="script.js"></script>
   </body>
